src/test/ui/invalid/invalid-inline.stderr
error[E0535]: invalid argument
  --> $DIR/invalid-inline.rs:3:10
   |
LL | #[inline(please_no)]
   |          ^^^^^^^^^

error[E0534]: expected one argument
  --> $DIR/invalid-inline.rs:7:1
   |
LL | #[inline(please,no)]
   | ^^^^^^^^^^^^^^^^^^^^

error[E0534]: expected one argument
  --> $DIR/invalid-inline.rs:11:1
   |
LL | #[inline()]
   | ^^^^^^^^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0534, E0535.
For more information about an error, try `rustc --explain E0534`.
